--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Joelle Shapiro</a>.
+    Coded by <a href="https://github.com/Capricornered">Joelle Shapiro</a>.
   </div>
 </body>
 </html>
