--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
   <div class="qr-container">
     <div class="qr-box">
-    <img src="images/image-qr-code.png" alt="QR code linking to frontend mentor" class="qr-code">
-    <div class="main-text">
-      Improve your front-end skills by building projects
+      <img src="images/image-qr-code.png" alt="QR code linking to frontend mentor" class="qr-code">
+      <h1 class="main-text">
+        Improve your front-end skills by building projects
+      </h1>
+      <br />
+      <div class="sub-text">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </div>
     </div>
-    <br />
-    <div class="sub-text">
-      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-    </div>
-  </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
